--- a/SalesEdge/Base.lproj/Main.storyboard
+++ b/SalesEdge/Base.lproj/Main.storyboard
@@ -19,11 +19,42 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="e34-v1-RTW">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.027450980390000001" green="0.72549019609999998" blue="0.60784313729999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
+                    <connections>
+                        <segue destination="2Ad-aW-YsJ" kind="relationship" relationship="rootViewController" id="DQZ-WA-nb7"/>
+                    </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="coJ-te-5S9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="532" y="-1077"/>
+        </scene>
+        <!--Pager View Controller-->
+        <scene sceneID="nqJ-4Z-pkF">
+            <objects>
+                <viewController storyboardIdentifier="MyShareAppViewController" id="wEn-Vp-2Zi" customClass="XLPagerViewController" customModule="SalesEdge" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="XIn-AI-QVg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Je1-Gl-Q6z">
+                                <rect key="frame" x="147" y="230" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="JYK-Zc-UyC"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5Uf-4O-Qoi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3081" y="-1047"/>
         </scene>
         <!--Scan Master-->
         <scene sceneID="fc1-Al-LDm">
@@ -223,14 +254,63 @@
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="ygn-HJ-6jG" kind="relationship" relationship="viewControllers" id="JfH-U8-YpS"/>
                         <segue destination="PRA-hX-b79" kind="relationship" relationship="viewControllers" id="B6r-AU-Peu"/>
                         <segue destination="MPa-G9-f43" kind="relationship" relationship="viewControllers" id="gND-Gq-yyH"/>
+                        <segue destination="ygn-HJ-6jG" kind="relationship" relationship="viewControllers" id="vzl-ij-trI"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-428" y="45"/>
+        </scene>
+        <!--My-->
+        <scene sceneID="BTp-wu-O0d">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="2Ad-aW-YsJ" customClass="MyPageViewController" customModule="SalesEdge" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="sfA-8w-rOa">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MVK-s1-CaT">
+                                <rect key="frame" x="0.0" y="107" width="375" height="510"/>
+                            </scrollView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="yb3-zG-5Vv" customClass="ButtonBarView" customModule="XLPagerTabStrip">
+                                <rect key="frame" x="0.0" y="64" width="375" height="43"/>
+                                <color key="backgroundColor" red="0.027450980390000001" green="0.72549019609999998" blue="0.60784313729999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="43" id="sDe-LW-W4j"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="WjK-0Q-SD5">
+                                    <size key="itemSize" width="79" height="42"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="35" minY="0.0" maxX="35" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="yb3-zG-5Vv" firstAttribute="top" secondItem="WR7-GR-5cv" secondAttribute="top" id="0m1-K3-ovN"/>
+                            <constraint firstItem="WR7-GR-5cv" firstAttribute="bottom" secondItem="MVK-s1-CaT" secondAttribute="bottom" constant="1" id="Igl-rx-b1b"/>
+                            <constraint firstItem="yb3-zG-5Vv" firstAttribute="leading" secondItem="WR7-GR-5cv" secondAttribute="leading" id="Odp-EO-swJ"/>
+                            <constraint firstItem="MVK-s1-CaT" firstAttribute="top" secondItem="WR7-GR-5cv" secondAttribute="top" constant="43" id="ZTu-0o-myM"/>
+                            <constraint firstItem="WR7-GR-5cv" firstAttribute="trailing" secondItem="MVK-s1-CaT" secondAttribute="trailing" id="bT2-VK-0F0"/>
+                            <constraint firstItem="MVK-s1-CaT" firstAttribute="leading" secondItem="WR7-GR-5cv" secondAttribute="leading" id="cof-ef-Bnf"/>
+                            <constraint firstItem="WR7-GR-5cv" firstAttribute="trailing" secondItem="yb3-zG-5Vv" secondAttribute="trailing" id="fY9-MN-BES"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="WR7-GR-5cv"/>
+                    </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="My" id="42F-K6-9bT"/>
+                    <connections>
+                        <outlet property="buttonBarView" destination="yb3-zG-5Vv" id="Hf5-vF-2nN"/>
+                        <outlet property="containerView" destination="MVK-s1-CaT" id="BiD-kB-cXT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GYz-Zi-7Ox" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2308" y="-1096"/>
         </scene>
     </scenes>
     <resources>
