--- a/SalesEdge/Base.lproj/Main.storyboard
+++ b/SalesEdge/Base.lproj/Main.storyboard
@@ -205,7 +205,7 @@
             </objects>
             <point key="canvasLocation" x="1443.5" y="-331.5"/>
         </scene>
-        <!--Sales Edge-->
+        <!--PA-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
                 <viewController id="8rJ-Kc-sve" customClass="PAViewController" customModule="SalesEdge" customModuleProvider="target" sceneMemberID="viewController">
@@ -228,7 +228,7 @@
                         <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="PA" id="cPa-gy-q4n"/>
-                    <navigationItem key="navigationItem" title="Sales Edge" id="Wcv-nf-yGZ"/>
+                    <navigationItem key="navigationItem" title="PA" id="Wcv-nf-yGZ"/>
                     <connections>
                         <outlet property="mWebView" destination="Wds-k7-9JY" id="Cjh-bT-Jd5"/>
                     </connections>
@@ -257,7 +257,7 @@
         <!--Sales Edge-->
         <scene sceneID="yl2-sM-qoP">
             <objects>
-                <tabBarController id="49e-Tb-3d3" sceneMemberID="viewController">
+                <tabBarController id="49e-Tb-3d3" customClass="MainViewController" customModule="SalesEdge" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" title="Sales Edge" id="4EN-8d-jzv"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="W28-zg-YXA">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
@@ -265,9 +265,9 @@
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="PRA-hX-b79" kind="relationship" relationship="viewControllers" id="B6r-AU-Peu"/>
-                        <segue destination="MPa-G9-f43" kind="relationship" relationship="viewControllers" id="gND-Gq-yyH"/>
-                        <segue destination="ygn-HJ-6jG" kind="relationship" relationship="viewControllers" id="vzl-ij-trI"/>
+                        <segue destination="ygn-HJ-6jG" kind="relationship" relationship="viewControllers" id="2HU-IR-cB8"/>
+                        <segue destination="PRA-hX-b79" kind="relationship" relationship="viewControllers" id="nvC-wP-7dU"/>
+                        <segue destination="MPa-G9-f43" kind="relationship" relationship="viewControllers" id="LHl-vX-M0y"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -361,40 +361,58 @@
             </objects>
             <point key="canvasLocation" x="3621.5999999999999" y="-1077.2113943028487"/>
         </scene>
-        <!--Pager Item View Controller-->
+        <!--My Biz Card View Controller-->
         <scene sceneID="4Kz-cV-mkf">
             <objects>
-                <viewController storyboardIdentifier="MyBizCardViewController" id="m14-H8-NlX" customClass="XLPagerItemViewController" customModule="SalesEdge" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MyBizCardViewController" id="m14-H8-NlX" customClass="MyBizCardViewController" customModule="SalesEdge" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="IsB-l8-6fJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Install  app before sharing" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mQ2-WM-VDe">
-                                <rect key="frame" x="16" y="40" width="343" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="252" image="app_share_qrcode" translatesAutoresizingMaskIntoConstraints="NO" id="T1A-fa-IUZ">
-                                <rect key="frame" x="16" y="40" width="343" height="611"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="The data entry here will be converted to QRCODE" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="DfU-ea-QaF">
+                                <rect key="frame" x="16" y="36" width="298" height="87"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="87" id="c7r-rw-GQa"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <connections>
+                                    <outlet property="delegate" destination="m14-H8-NlX" id="2yt-g7-xEQ"/>
+                                </connections>
+                            </textView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="app_share_qrcode" translatesAutoresizingMaskIntoConstraints="NO" id="pHU-RG-azA">
+                                <rect key="frame" x="16" y="145" width="343" height="502"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="teX-9b-XuL">
+                                <rect key="frame" x="322" y="64" width="37" height="30"/>
+                                <state key="normal" title="Done"/>
+                                <connections>
+                                    <action selector="onBtnDoneTouch:" destination="m14-H8-NlX" eventType="touchDown" id="Dwu-Hx-8OI"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="mQ2-WM-VDe" firstAttribute="top" secondItem="I1n-tE-Mbw" secondAttribute="top" constant="20" id="6LN-CN-bLF"/>
-                            <constraint firstItem="I1n-tE-Mbw" firstAttribute="trailing" secondItem="mQ2-WM-VDe" secondAttribute="trailing" constant="16" id="DoP-jN-wM6"/>
-                            <constraint firstItem="I1n-tE-Mbw" firstAttribute="trailing" secondItem="T1A-fa-IUZ" secondAttribute="trailing" constant="16" id="Zmp-zx-Uls"/>
-                            <constraint firstItem="mQ2-WM-VDe" firstAttribute="leading" secondItem="I1n-tE-Mbw" secondAttribute="leading" constant="16" id="fXO-uE-Ufr"/>
-                            <constraint firstItem="T1A-fa-IUZ" firstAttribute="leading" secondItem="I1n-tE-Mbw" secondAttribute="leading" constant="16" id="k13-dD-6oF"/>
-                            <constraint firstItem="T1A-fa-IUZ" firstAttribute="top" secondItem="mQ2-WM-VDe" secondAttribute="top" id="paS-eq-Yxh"/>
-                            <constraint firstItem="I1n-tE-Mbw" firstAttribute="bottom" secondItem="T1A-fa-IUZ" secondAttribute="bottom" constant="16" id="qHb-vj-QhK"/>
+                            <constraint firstItem="teX-9b-XuL" firstAttribute="leading" secondItem="DfU-ea-QaF" secondAttribute="trailing" constant="8" id="C2M-Fa-D2S"/>
+                            <constraint firstItem="pHU-RG-azA" firstAttribute="top" secondItem="DfU-ea-QaF" secondAttribute="bottom" constant="22" id="Jif-Lc-2t6"/>
+                            <constraint firstItem="teX-9b-XuL" firstAttribute="centerY" secondItem="DfU-ea-QaF" secondAttribute="centerY" id="N0t-2G-O80"/>
+                            <constraint firstItem="DfU-ea-QaF" firstAttribute="leading" secondItem="I1n-tE-Mbw" secondAttribute="leading" constant="16" id="SkC-Ab-4JU"/>
+                            <constraint firstItem="I1n-tE-Mbw" firstAttribute="trailing" secondItem="teX-9b-XuL" secondAttribute="trailing" constant="16" id="h2o-VW-5NS"/>
+                            <constraint firstItem="I1n-tE-Mbw" firstAttribute="trailing" secondItem="pHU-RG-azA" secondAttribute="trailing" constant="16" id="mli-cB-Vde"/>
+                            <constraint firstItem="DfU-ea-QaF" firstAttribute="top" secondItem="I1n-tE-Mbw" secondAttribute="top" constant="16" id="rKe-4w-9Y0"/>
+                            <constraint firstItem="pHU-RG-azA" firstAttribute="leading" secondItem="I1n-tE-Mbw" secondAttribute="leading" constant="16" id="sy0-wl-rNy"/>
+                            <constraint firstItem="I1n-tE-Mbw" firstAttribute="bottom" secondItem="pHU-RG-azA" secondAttribute="bottom" constant="20" id="wTr-Ys-Qfd"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="I1n-tE-Mbw"/>
                     </view>
+                    <connections>
+                        <outlet property="mImgQRCode" destination="pHU-RG-azA" id="xxo-OL-4wV"/>
+                        <outlet property="mTextView" destination="DfU-ea-QaF" id="h9F-6e-hEj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IgP-oh-1Yy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4785" y="-1078"/>
+            <point key="canvasLocation" x="4593.5" y="-1088.5"/>
         </scene>
     </scenes>
     <resources>
